# lektor-index-pages

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  MANIFEST.in  README.md  example.ini  pdm_build.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish-to-pypi.yaml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/reference/: configuration.rst  templateapi.rst  virtualsources.rst
docs/usage/: examples.rst  installation.rst
lektor_index_pages/: __init__.py  buildprog.py  config.py  indexmodel.py  plugin.py  pruner.py  sourceobj.py
tests/: conftest.py  test_buildprog.py  test_config.py  test_functional.py  test_indexmodel.py  test_plugin.py  test_sourceobj.py
tests/demo-site/: Test Project.lektorproject
tests/demo-site/configs/: index-pages.ini
tests/demo-site/content/: contents.lr
tests/demo-site/content/blog/first-post/: contents.lr
tests/demo-site/content/blog/second-post/: contents.lr
tests/demo-site/models/: blog-post.ini
tests/demo-site/templates/: blog.html  layout.html  month-index.html  year-index.html
tests/demo-site/templates/macros/: blog-index.html  blog.html
