[metadata]
name = lektor-index-pages
description = Lektor plugin to generate blog-like index pages
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/lektor-index-pages
project_urls =
    Documentation = https://lektor-index-pages.readthedocs.io/en/latest/
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = Lektor plugin, blog index
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Text Processing :: Indexing

[options]
packages = lektor_index_pages
python_requires = >= 3.6
install_requires =
    more-itertools
    lektorlib
    jinja2>=3

[options.entry_points]
lektor.plugins =
    index-pages = lektor_index_pages:IndexPagesPlugin
